firebase push notifications, crashlytics, dept shared preference, modified refresh process

--- a/app/src/main/res/layout/activity_faculty.xml
+++ b/app/src/main/res/layout/activity_faculty.xml
@@ -57,6 +57,8 @@
             android:id="@+id/faculty_button"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:foreground="?android:attr/selectableItemBackground"
+            android:clickable="true"
             android:layout_marginTop="15dp"
             android:background="@color/colorPrimary"
             android:padding="12dp"
@@ -75,6 +77,8 @@
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
                 android:layout_marginRight="2dp"
+                android:foreground="?android:attr/selectableItemBackground"
+                android:clickable="true"
                 android:layout_weight="1"
                 android:background="@color/colorPrimary"
                 android:padding="2dp"
@@ -85,6 +89,8 @@
                 android:id="@+id/faculty_download"
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
+                android:foreground="?android:attr/selectableItemBackground"
+                android:clickable="true"
                 android:layout_marginBottom="8dp"
                 android:layout_marginLeft="2dp"
                 android:layout_weight="1"
