--- a/app/src/main/res/layout/activity_timetable.xml
+++ b/app/src/main/res/layout/activity_timetable.xml
@@ -61,11 +61,15 @@
         android:background="@color/colorPrimary"
         android:textColor="@color/colorBackground"
         android:layout_height="wrap_content"
+        android:foreground="?android:attr/selectableItemBackground"
+        android:clickable="true"
         android:layout_marginTop="25dp"
         android:text="View"/>
 
     <Button
         android:id="@+id/timeTableDownloadButton"
+        android:foreground="?android:attr/selectableItemBackground"
+        android:clickable="true"
         android:layout_width="200dp"
         android:layout_height="wrap_content"
         android:layout_gravity="center"
