--- a/app/src/main/res/layout/content_sem_selection.xml
+++ b/app/src/main/res/layout/content_sem_selection.xml
@@ -38,11 +38,9 @@
 
 
 
-        <!-- Password Label -->
         <android.support.design.widget.TextInputLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-
             android:layout_marginTop="50dp"
             android:layout_marginBottom="20dp">
             <Spinner android:id="@+id/semspinner"
@@ -57,6 +55,8 @@
             android:layout_height="wrap_content"
             android:background="@color/colorPrimary"
             android:textColor="@color/colorBackground"
+            android:foreground="?android:attr/selectableItemBackground"
+            android:clickable="true"
             android:layout_marginBottom="8dp"
             android:padding="12dp"
             android:text="Submit"/>
