--- a/app/src/main/res/layout/list_view.xml
+++ b/app/src/main/res/layout/list_view.xml
@@ -1,10 +1,4 @@
 <?xml version="1.0" encoding="utf-8"?>
-
-<android.support.v4.widget.SwipeRefreshLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
-    android:id="@+id/swipe_container"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent">
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
@@ -12,6 +6,7 @@
     xmlns:tools="http://schemas.android.com/tools">
     <ListView
         android:id="@+id/list"
+        android:longClickable="true"
         android:orientation="vertical"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
@@ -25,7 +20,7 @@
         android:textAppearance="@android:style/TextAppearance.DeviceDefault.Medium"
         android:layout_centerInParent="true"
         android:textAlignment="center"
-        android:text="Connection not available! \n(Swipe to Refresh)"/>
+        android:text="Connection not available! "/>
 
     <ImageView
         android:id="@+id/empty_imageview"
@@ -56,4 +51,3 @@
         android:layout_centerInParent="true"/>
 
 </RelativeLayout>
-</android.support.v4.widget.SwipeRefreshLayout>
