--- a/app/src/main/res/layout/activity_wifi_status.xml
+++ b/app/src/main/res/layout/activity_wifi_status.xml
@@ -105,8 +105,18 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_below="@id/text_container_wifi"
-        android:layout_margin="30dp"
+        android:layout_marginLeft="20dp"
+        android:layout_marginRight="20dp"
         android:textColor="@color/colorBackground"
         android:background="@color/colorPrimaryDark"
         android:text="Refresh"/>
+    <com.google.android.gms.ads.AdView
+        android:layout_alignParentBottom="true"
+        xmlns:ads="http://schemas.android.com/apk/res-auto"
+        android:id="@+id/adView"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        ads:adSize="BANNER"
+        ads:adUnitId="@string/banner_id">
+    </com.google.android.gms.ads.AdView>
 </RelativeLayout>
