--- a/app/src/main/res/menu/activity_launching_drawer.xml
+++ b/app/src/main/res/menu/activity_launching_drawer.xml
@@ -40,8 +40,8 @@
 
         <item
             android:id="@+id/nav_faq"
-            android:icon="@drawable/ic_help"
-            android:title="Exams FAQ"
+            android:icon="@drawable/help"
+            android:title="FAQ - Examinations"
             android:checkable="false"/>
         <item
             android:id="@+id/nav_campuswifi"
