added picture, multi-campus support, marks and CA

--- a/app/src/main/res/layout/activity_home.xml
+++ b/app/src/main/res/layout/activity_home.xml
@@ -8,12 +8,26 @@
     android:background="@color/colorBackground"
     android:layout_height="match_parent"
     xmlns:android="http://schemas.android.com/apk/res/android">
+    <RelativeLayout
+        android:id="@+id/image_holder"
+        android:layout_centerHorizontal="true"
+        android:layout_width="97dp"
+        android:layout_height="128dp">
+        <ProgressBar
+            android:id="@+id/image_progress"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_centerInParent="true"
+            android:indeterminate="true" />
         <ImageView
             android:id="@+id/userImage"
-            android:layout_width="100dp"
-            android:layout_height="100dp"
+            android:layout_width="97dp"
+            android:layout_height="128dp"
             tools:src="@drawable/logosq"
+            android:visibility="gone"
             android:layout_centerHorizontal="true"/>
+
+    </RelativeLayout>
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
@@ -23,10 +37,10 @@
             tools:text="RAJKUMAR S"
             android:textStyle="bold"
             android:textColor="@color/colorPrimaryDark"
-            android:layout_marginTop="20dp"
+            android:layout_marginTop="15dp"
             android:textSize="20sp"
             android:textAllCaps="true"
-            android:layout_below="@id/userImage"/>
+            android:layout_below="@id/image_holder"/>
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
