--- a/app/src/main/res/layout/activity_grades.xml
+++ b/app/src/main/res/layout/activity_grades.xml
@@ -1,11 +1,22 @@
 <?xml version="1.0" encoding="utf-8"?>
-<ListView xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:background="@color/colorBackground"
-    xmlns:tools="http://schemas.android.com/tools"
-    android:id="@+id/list"
+<RelativeLayout android:id="@+id/image_holder"
+    android:layout_centerHorizontal="true"
     android:layout_width="match_parent"
+    android:background="@color/colorBackground"
     android:layout_height="match_parent"
-    tools:context=".aums.AttendanceActivity">
-
-</ListView>
+    xmlns:android="http://schemas.android.com/apk/res/android">
+    <ProgressBar
+        android:id="@+id/progressBar"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_centerInParent="true"
+        android:indeterminate="true" />
+    <ListView xmlns:android="http://schemas.android.com/apk/res/android"
+        xmlns:tools="http://schemas.android.com/tools"
+        android:id="@+id/list"
+        android:visibility="gone"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        tools:context=".aums.AttendanceActivity">
+    </ListView>
+</RelativeLayout>
