--- a/app/src/main/res/layout/attendance_item.xml
+++ b/app/src/main/res/layout/attendance_item.xml
@@ -44,14 +44,14 @@
             android:id="@+id/title"
             android:textColor="@color/colorPrimaryDark"
             tools:text="Hello Attendance"
-            android:textSize="18sp"
+            android:textAppearance="?android:attr/textAppearanceLarge"
             android:textStyle="bold"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content" />
         <TextView
             android:id="@+id/attended"
             tools:text="You attended 13 of 15 classes"
-            android:textSize="15sp"
+            android:textAppearance="?android:attr/textAppearanceMedium"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content" />
 
