--- a/app/src/main/res/layout/content_sem_selection.xml
+++ b/app/src/main/res/layout/content_sem_selection.xml
@@ -63,13 +63,18 @@
             android:layout_marginBottom="8dp"
             android:padding="12dp"
             android:text="Submit"/>
-        <TextView
-            android:layout_width="wrap_content"
+        <Button
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_gravity="center"
+            android:layout_marginTop="10dp"
             android:textAlignment="center"
-            android:text="@string/wifi_warning"
-            android:layout_margin="15dp"/>
+            android:foreground="?android:attr/selectableItemBackground"
+            android:clickable="true"
+            android:textColor="@color/colorBackground"
+            android:background="@drawable/button"
+            android:text="Login to Aums"
+            android:padding="15dp"/>
 
 
 
