--- a/app/src/main/res/layout/grades_item.xml
+++ b/app/src/main/res/layout/grades_item.xml
@@ -43,15 +43,15 @@
         <TextView
             android:id="@+id/title"
             android:textColor="@color/colorPrimaryDark"
-            tools:text="Hello Attendance"
-            android:textSize="18sp"
+            tools:text="Object Oriented Programming"
+            android:textAppearance="?android:attr/textAppearanceLarge"
             android:textStyle="bold"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content" />
         <TextView
             android:id="@+id/code_type"
-            tools:text="You attended 13 of 15 classes"
-            android:textSize="15sp"
+            tools:text="15CSE201 - Regular"
+            android:textAppearance="?android:attr/textAppearanceMedium"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content" />
 
