bug fixes, removed cumbersome analytics, minor UI improvements in AUMS

--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -5,4 +5,6 @@
     <color name="colorAccent">#bf360c</color>
     <color name="colorBackground">#bbdefb</color>
     <color name="black_overlay">#66000000</color>
+
+    <color name="danger">#b71c1c</color>
 </resources>
