--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -7,4 +7,5 @@
     <color name="black_overlay">#66000000</color>
 
     <color name="danger">#b71c1c</color>
+    <color name="yellow">#827717</color>
 </resources>
