Refactors into clean code and moves files to respective packages
Signed-off-by: Rajkumar <rajkumaar2304@gmail.com>

--- a/app/src/main/res/layout/activity_delete_files.xml
+++ b/app/src/main/res/layout/activity_delete_files.xml
@@ -6,7 +6,7 @@
     android:background="@color/colorBackground"
     android:layout_height="match_parent"
     android:orientation="vertical"
-    tools:context=".DeleteFiles">
+    tools:context=".downloads.DeleteFilesActivity">
 
     <ListView
         android:id="@+id/list"
