--- a/app/src/main/res/layout/activity_curriculum.xml
+++ b/app/src/main/res/layout/activity_curriculum.xml
@@ -14,7 +14,7 @@
     android:visibility="gone"
     android:orientation="vertical"
     android:layout_height="wrap_content"
-    tools:context=".CurriculumActivity">
+    tools:context=".curriculum.CurriculumActivity">
 
     <TextView
         android:layout_marginStart="8dp"
