--- a/app/src/main/res/layout/activity_exams_under_each_dept.xml
+++ b/app/src/main/res/layout/activity_exams_under_each_dept.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@color/colorBackground"
-    tools:context=".ExamSchedule">
+    tools:context=".examschedule.ExamCategoryActivity">
 
     <ProgressBar
         android:id="@+id/progressBar"
