--- a/app/src/main/res/layout/activity_launching.xml
+++ b/app/src/main/res/layout/activity_launching.xml
@@ -11,7 +11,7 @@
     tools:openDrawer="start">
 
     <include
-        layout="@layout/app_bar_sem_selection"
+        layout="@layout/app_bar_main"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         />
@@ -25,7 +25,7 @@
         android:layout_height="match_parent"
         android:layout_gravity="start"
         android:fitsSystemWindows="true"
-        app:headerLayout="@layout/nav_header_sem_selection"
+        app:headerLayout="@layout/nav_header_main"
         app:menu="@menu/activity_launching_drawer" />
 
 </android.support.v4.widget.DrawerLayout>
