--- a/app/src/main/res/layout/app_bar_main.xml
+++ b/app/src/main/res/layout/app_bar_main.xml
@@ -20,7 +20,7 @@
 
     </android.support.design.widget.AppBarLayout>
 
-    <include layout="@layout/content_sem_selection" />
+    <include layout="@layout/content_main" />
 
 
 </android.support.design.widget.CoordinatorLayout>
