--- a/app/src/main/res/layout/nav_header_main.xml
+++ b/app/src/main/res/layout/nav_header_main.xml
@@ -3,6 +3,7 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="@dimen/nav_header_height"
+    xmlns:tools="http://schemas.android.com/tools"
     android:background="@drawable/abstractblue"
     android:gravity="bottom"
     android:orientation="vertical"
@@ -34,7 +35,8 @@
         android:id="@+id/versioncode"
         android:layout_width="wrap_content"
         android:fontFamily="@font/cunia"
-        android:textColor="@android:color/black"
+        tools:text="Version 2.1.2"
+        android:textColor="@color/colorBackground"
         android:layout_height="wrap_content" />
 
 </LinearLayout>
