--- a/app/src/main/res/menu/activity_launching_drawer.xml
+++ b/app/src/main/res/menu/activity_launching_drawer.xml
@@ -16,9 +16,9 @@
             android:title="Downloads"
             android:checkable="false"/>
         <item
-            android:title="Train and Bus Timings"
-            android:id="@+id/timings"
-            android:icon="@drawable/train"
+            android:title="FAQ - Exams"
+            android:id="@+id/nav_faq"
+            android:icon="@drawable/help"
             android:checkable="false"
             />
     </group>
