--- a/app/src/main/res/layout/activity_exam_schedule.xml
+++ b/app/src/main/res/layout/activity_exam_schedule.xml
@@ -15,12 +15,21 @@
         android:layout_centerInParent="true"/>
     <ListView
         android:id="@+id/list"
+        android:layout_above="@id/adView"
         android:dividerHeight="0dp"
         android:layout_width="match_parent"
         android:layout_height="match_parent">
 
     </ListView>
-
+    <com.google.android.gms.ads.AdView
+        android:layout_alignParentBottom="true"
+        xmlns:ads="http://schemas.android.com/apk/res-auto"
+        android:id="@+id/adView"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        ads:adSize="BANNER"
+        ads:adUnitId="@string/banner_id">
+    </com.google.android.gms.ads.AdView>
 
 
 </RelativeLayout>
