--- a/app/src/main/res/layout/activity_grades.xml
+++ b/app/src/main/res/layout/activity_grades.xml
@@ -17,6 +17,6 @@
         android:visibility="gone"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        tools:context=".aums.AttendanceActivity">
+        tools:context=".aums.activities.AttendanceActivity">
     </ListView>
 </RelativeLayout>
