--- a/app/src/main/res/layout/activity_about.xml
+++ b/app/src/main/res/layout/activity_about.xml
@@ -5,14 +5,17 @@
     android:layout_height="match_parent"
     android:background="@color/colorBackground"
     android:fillViewport="false">
-
+<ScrollView
+    android:layout_width="match_parent"
+    android:layout_above="@id/adView"
+    android:layout_height="match_parent">
     <LinearLayout
+        android:layout_gravity="center"
+        android:gravity="center"
+        android:layout_marginTop="20dp"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:layout_alignParentLeft="true"
-        android:orientation="vertical"
-        android:paddingBottom="20dp"
-        android:paddingTop="20dp">
+        android:layout_height="wrap_content"
+        android:orientation="vertical">
 
         <ImageView
             android:id="@+id/aboutlogo"
@@ -24,7 +27,6 @@
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-
             android:layout_gravity="center"
             android:fontFamily="@font/cunia"
             android:text="Amrita\nRepository"
@@ -39,60 +41,178 @@
             android:layout_gravity="center"
             android:textSize="15sp" />
 
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_gravity="center"
-            android:layout_marginTop="10dp"
-            android:fontFamily="@font/cunia"
-            android:text="By Rajkumar"
-            android:textAppearance="@android:style/TextAppearance.Small"/>
-
-
-    </LinearLayout>
-
-    <LinearLayout
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_above="@id/adView"
-        android:layout_centerHorizontal="true"
-        android:orientation="vertical">
-        <Button
-            android:id="@+id/disclaimer"
+        <android.support.v7.widget.CardView
+            android:layout_marginTop="20dp"
+            xmlns:card_view="http://schemas.android.com/apk/res-auto"
+            android:layout_margin="10dp"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:text="View Disclaimer"
-            android:textColor="@color/colorBackground"
-            android:background="@color/colorPrimaryDark"/>
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_margin="10dp"
-            android:layout_gravity="center"
-            android:text="Third Party Libraries : jsoup, asynchttpclient"/>
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_gravity="center"
-            android:fontFamily="@font/dustismo"
-            android:text="For more details :"
-            android:textAppearance="@android:style/TextAppearance.Small" />
+            card_view:cardCornerRadius="10dp">
 
+            <RelativeLayout tools:ignore="HardcodedText"
+                xmlns:android="http://schemas.android.com/apk/res/android"
+                android:layout_width="match_parent"
+                android:layout_margin="16dp"
+                android:layout_height="wrap_content"
+                xmlns:tools="http://schemas.android.com/tools">
+                <LinearLayout
+                    android:id="@+id/type_container"
+                    android:orientation="horizontal"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content">
 
-        <TextView
-            android:id="@+id/email"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_gravity="center"
-            android:textStyle="bold"
-            android:fontFamily="@font/dustismo"
-            android:textColor="@color/colorPrimaryDark"
-            android:textSize="18dp"
-            android:autoLink="web"
-            android:paddingBottom="30dp"
-            android:text="rajkumaar.co.in"
-            android:textAppearance="@android:style/TextAppearance.Small" />
+                    <LinearLayout
+                        android:layout_width="0dp"
+                        android:layout_weight="1"
+                        android:gravity="start"
+                        android:orientation="horizontal"
+                        android:layout_height="wrap_content">
+                        <LinearLayout
+                            android:layout_width="wrap_content"
+                            android:id="@+id/type_background"
+                            android:background="@color/dark_blue"
+                            android:layout_height="wrap_content">
+                            <TextView
+                                android:id="@+id/pass_type"
+                                android:textStyle="bold"
+                                android:textSize="12sp"
+                                android:layout_gravity="center"
+                                android:gravity="center"
+                                android:layout_width="wrap_content"
+                                android:layout_height="wrap_content"
+                                android:textColor="@android:color/white"
+                                android:padding="3dp"
+                                android:text="Developer"/>
+                        </LinearLayout>
+                    </LinearLayout>
+                    <LinearLayout
+                        android:layout_width="0dp"
+                        android:layout_weight="1"
+                        android:layout_gravity="center_vertical"
+                        android:gravity="end"
+                        android:layout_height="wrap_content">
+                        <TextView
+                            android:textStyle="bold"
+                            android:textSize="12sp"
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:background="@color/green"
+                            android:textColor="@android:color/white"
+                            android:padding="3dp"
+                            android:text="Android"/>
+                        <TextView
+                            android:layout_marginLeft="5dp"
+                            android:layout_marginStart="5dp"
+                            android:textStyle="bold"
+                            android:textSize="12sp"
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:background="@color/orange"
+                            android:textColor="@android:color/white"
+                            android:padding="3dp"
+                            android:text="Backend"/>
+                    </LinearLayout>
+                </LinearLayout>
+
+                <LinearLayout
+                    android:id="@+id/date_container"
+                    android:layout_marginTop="5dp"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_below="@id/type_container"
+                    android:orientation="vertical">
+
+                    <LinearLayout
+                        android:padding="3dp"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content">
+
+                        <TextView
+                            android:layout_width="0dp"
+                            android:layout_height="wrap_content"
+                            android:layout_weight="1"
+                            android:text="Name"
+                            android:textAppearance="@android:style/TextAppearance.DeviceDefault"
+                            android:textStyle="bold" />
+
+                        <TextView
+                            android:layout_width="0dp"
+                            android:layout_height="wrap_content"
+                            android:layout_weight="1"
+                            android:text="Rajkumar S"
+                            android:textAppearance="@android:style/TextAppearance.DeviceDefault" />
+                    </LinearLayout>
+
+                    <LinearLayout
+                        android:padding="3dp"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content">
+
+                        <TextView
+                            android:layout_width="0dp"
+                            android:layout_height="wrap_content"
+                            android:layout_weight="1"
+                            android:text="Website"
+                            android:textAppearance="@android:style/TextAppearance.DeviceDefault"
+                            android:textStyle="bold" />
+
+                        <TextView
+                            android:layout_width="0dp"
+                            android:layout_height="wrap_content"
+                            android:layout_weight="1"
+                            android:autoLink="web"
+                            android:text="https://rajkumaar.co.in"
+                            android:textAppearance="@android:style/TextAppearance.DeviceDefault" />
+                    </LinearLayout>
+                    <LinearLayout
+                        android:padding="3dp"
+                        android:id="@+id/reason_container"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content">
+
+                        <TextView
+                            android:layout_width="0dp"
+                            android:layout_height="wrap_content"
+                            android:layout_weight="1"
+                            android:text="Contact"
+                            android:textAppearance="@android:style/TextAppearance.DeviceDefault"
+                            android:textStyle="bold" />
+
+                        <LinearLayout
+                            android:layout_width="0dp"
+                            android:layout_height="wrap_content"
+                            android:layout_weight="1">
+                            <TextView
+                                android:layout_height="wrap_content"
+                                android:layout_width="wrap_content"
+                                android:autoLink="email"
+                                android:textColor="@android:color/black"
+                                android:text="rajkumaar2304@gmail.com"
+                                android:textAppearance="@android:style/TextAppearance.DeviceDefault"
+                                />
+                        </LinearLayout>
+                    </LinearLayout>
+                    <Button
+                        android:layout_marginTop="10dp"
+                        android:id="@+id/disclaimer"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:text="View Disclaimer"
+                        android:textColor="@color/colorBackground"
+                        android:background="@color/colorPrimaryDark"/>
+                    <TextView
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_margin="10dp"
+                        android:layout_gravity="center"
+                        android:text="Third Party Libraries : jsoup, asynchttpclient"/>
+                </LinearLayout>
+            </RelativeLayout>
+
+        </android.support.v7.widget.CardView>
+
     </LinearLayout>
+</ScrollView>
     <com.google.android.gms.ads.AdView
         android:layout_alignParentBottom="true"
         xmlns:ads="http://schemas.android.com/apk/res-auto"
