Formats text in About Activity
Signed-off-by: Rajkumar <rajkumaar2304@gmail.com>

--- a/app/src/main/res/layout/activity_about.xml
+++ b/app/src/main/res/layout/activity_about.xml
@@ -30,7 +30,7 @@
             android:layout_gravity="center"
             android:textColor="@color/colorPrimaryDark"
             android:fontFamily="@font/cunia"
-            android:text="Amrita\nRepository"
+            android:text="Amrita Repository"
             android:textAlignment="center"
             android:textSize="24sp" />
 
