--- a/app/src/main/res/layout/activity_about.xml
+++ b/app/src/main/res/layout/activity_about.xml
@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    xmlns:tools="http://schemas.android.com/tools"
     android:background="@color/colorBackground"
     android:fillViewport="false">
 <ScrollView
@@ -20,7 +20,7 @@
         <ImageView
             android:id="@+id/aboutlogo"
             android:layout_width="100dp"
-            android:layout_height="141.4dp"
+            android:layout_height="100dp"
             android:layout_gravity="center"
             android:src="@drawable/logosq" />
 
@@ -30,18 +30,22 @@
             android:layout_gravity="center"
             android:textColor="@color/colorPrimaryDark"
             android:fontFamily="@font/cunia"
-            android:text="Amrita Repository"
+            android:text="Amrita\nRepository"
             android:textAlignment="center"
             android:textSize="24sp" />
 
         <TextView
             android:id="@+id/versioncode"
             android:layout_width="wrap_content"
-            android:textColor="@color/colorPrimaryDark"
+            android:textColor="@android:color/white"
+            android:background="@color/colorAccent"
+            android:padding="5dp"
+            android:layout_marginTop="3dp"
+            tools:text="Version 2.2"
             android:fontFamily="@font/cunia"
             android:layout_height="wrap_content"
             android:layout_gravity="center"
-            android:textSize="15sp" />
+            android:textSize="12sp" />
 
         <android.support.v7.widget.CardView
             android:layout_marginTop="20dp"
@@ -52,9 +56,10 @@
             card_view:cardCornerRadius="10dp">
 
             <RelativeLayout tools:ignore="HardcodedText"
+                android:background="@color/colorBackground"
                 xmlns:android="http://schemas.android.com/apk/res/android"
                 android:layout_width="match_parent"
-                android:layout_margin="16dp"
+                android:padding="16dp"
                 android:layout_height="wrap_content"
                 xmlns:tools="http://schemas.android.com/tools">
                 <LinearLayout
